fix top section styles on mobile

--- a/src/content/css/login.css
+++ b/src/content/css/login.css
@@ -10,3 +10,15 @@
 .loginTextField {
   margin-right: 3px !important;
 }
+
+@media screen and (max-width: 960px) {
+  #Login {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 5px;
+  }
+  .topSectionContainer .loginContainer {
+    justify-content: center;
+  }
+}
